# UrbanPulse

./: EDA_Miranda.ipynb  OpenStreetMap.py  README.md  additional_stadsdelsomrade.py  adress_converter.py  alvsjo_data.csv  christoffer_eda_scb_api_test.ipynb  clean_crime.ipynb  clean_parkering.py  combine_merit_and_school.py  combine_parking_school.py  combine_with_school.py  combined_services_for_map_cleaned.csv  concat_bromma_and_alvsjo.py  coordinates.py  eda_hannah.ipynb  etl.ipynb  etl_1.ipynb  etl_from_excel.ipynb  exel_brott.py  main.py  mean_age.py  openStreetMap.ipynb  parkering.py  pyproject.toml  requirements.txt  schools.py  schools_api.py  setup.py  stockholm_boende_deso_2024.csv  stockholm_folkm_deso_2024.csv  stockholm_hushall_deso_2024.csv  stockholm_inkomst_deso_2023.csv  update_brott.py
.devcontainer/: devcontainer.json
EDA/: EDA_Miranda.ipynb  christoffer_eda_scb_api_test.ipynb  eda_brå_kaktus.ipynb  eda_brå_sthlm.ipynb  eda_hannah.ipynb  eda_kaktus.ipynb  eda_karl.ipynb
api/: OpenStreetMap.py  parkering.py
bokoll/: pyproject.toml
combine_functions/: additional_stadsdelsomrade.py  combine_merit_and_school.py  combine_schools_merit_with_huvudman.py  concat_brott.py
data_files/: 1.2-folkmangd-den-31-dec-2010-2034.xlsx  1.20-in--och-utflyttade-samt-inomflyttningar-2024.xlsx  1.3-medelalder-2005-2024.xlsx  1.63-anmalda-brott-2024.xlsx  Alvsjo_Bromma_Omrade.csv  Brott_2024_Raw.xls  Brott_2025_raw.xls  Brott_2026_raw.xls  Brottsstatistik-2024-feb2026.xlsx  Grundskola - Antal elever per årskurs 2025 Skolnivå.csv  alvsjo_data.csv  bromma_data_raw.csv  (+49 more)
(+44 files in other folders)
