[project]
name = "urbanpulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "fastapi>=0.135.3",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "streamlit-folium>=0.27.1",
    "xlrd>=2.0.2",
]

[tool.uv.workspace]
members = [
    "bokoll",
]

[tool.uv]
package = true